------------------------------------------------------------------------------
  qPython 1.0 Beta 2 [2014.05.12]
------------------------------------------------------------------------------

  - Speed improvement for pure python uncompress
  - Added (optional) Cython module for best performance of uncompress


------------------------------------------------------------------------------
  qPython 1.0 Beta [2014.04.02]
------------------------------------------------------------------------------

  - Support for kdb+ protocol and types: v3.0, v2.6, v<=2.5
  - Synchronous and asynchronous queries