@@ -142,6 +142,8 @@ ED00000080
 630B000100000061000700010000000100000000000000
 1 2!`abc`cdefgh
 63070002000000010000000000000002000000000000000B00020000006162630063646566676800
+`abc`def`gh!([] one: 1 2 3; two: 4 5 6)
+630B000300000061626300646566006768006200630B00020000006F6E650074776F00000002000000070003000000010000000000000002000000000000000300000000000000070003000000040000000000000005000000000000000600000000000000
 (`x`y!(`a;2))
 630b000200000078007900000002000000f56100f90200000000000000
 (1;2h;3.234;"4")!(`one;2 3;"456";(7;8 9))
