@@ -101,6 +101,10 @@ EXPRESSIONS = OrderedDict((
                                                                                   qlist(numpy.array([1], dtype=numpy.int64), qtype=QLONG_LIST))),
                     ('1 2!`abc`cdefgh',                               QDictionary(qlist(numpy.array([1, 2], dtype=numpy.int64), qtype=QLONG_LIST),
                                                                                   qlist(numpy.array(['abc', 'cdefgh']), qtype = QSYMBOL_LIST))),
+                    ('`abc`def`gh!([] one: 1 2 3; two: 4 5 6)',       QDictionary(qlist(numpy.array(['abc', 'def', 'gh']), qtype = QSYMBOL_LIST),
+                                                                                  qtable(qlist(numpy.array(['one', 'two']), qtype = QSYMBOL_LIST), 
+                                                                                         [qlist(numpy.array([1, 2, 3]), qtype = QLONG_LIST), 
+                                                                                          qlist(numpy.array([4, 5, 6]), qtype = QLONG_LIST)]))),
                     ('(0 1; 2 3)!`first`second',                      QDictionary([qlist(numpy.array([0, 1], dtype=numpy.int64), qtype=QLONG_LIST), qlist(numpy.array([2, 3], dtype=numpy.int64), qtype=QLONG_LIST)],
                                                                                    qlist(numpy.array(['first', 'second']), qtype = QSYMBOL_LIST))),
                     ('(1;2h;3.234;"4")!(`one;2 3;"456";(7;8 9))',     QDictionary([numpy.int64(1), numpy.int16(2), numpy.float64(3.234), '4'],
