@@ -124,6 +124,10 @@ EXPRESSIONS = OrderedDict((
                                                                                  qlist(numpy.array([1]), qtype=QLONG_LIST)))),
                    ('1 2!`abc`cdefgh',                               QDictionary(qlist(numpy.array([1, 2], dtype=numpy.int64), qtype=QLONG_LIST),
                                                                                  qlist(numpy.array(['abc', 'cdefgh']), qtype = QSYMBOL_LIST))),
+                   ('`abc`def`gh!([] one: 1 2 3; two: 4 5 6)',       QDictionary(qlist(numpy.array(['abc', 'def', 'gh']), qtype = QSYMBOL_LIST),
+                                                                                 qtable(qlist(numpy.array(['one', 'two']), qtype = QSYMBOL_LIST), 
+                                                                                        [qlist(numpy.array([1, 2, 3]), qtype = QLONG_LIST), 
+                                                                                         qlist(numpy.array([4, 5, 6]), qtype = QLONG_LIST)]))),
                    ('(`x`y!(`a;2))',                                 QDictionary(qlist(numpy.array(['x', 'y']), qtype = QSYMBOL_LIST), 
                                                                                  [numpy.string_('a'), numpy.int64(2)])),
                    ('(0 1; 2 3)!`first`second',                      QDictionary([qlist(numpy.array([0, 1], dtype=numpy.int64), qtype=QLONG_LIST), qlist(numpy.array([2, 3], dtype=numpy.int64), qtype=QLONG_LIST)],
