@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  qPython 1.0 Beta 3 [2014.05.26]
+------------------------------------------------------------------------------
+
+  - Fix: creation of q dictionary with values represented as table
+
+------------------------------------------------------------------------------
   qPython 1.0 Beta 2 [2014.05.12]
 ------------------------------------------------------------------------------
 
